# NDA-Main

./: README.md
NDA-frontend/: index.html  package-lock.json  package.json
NDA-frontend/src/: App.jsx  main.jsx
NDA-frontend/src/components/: BoQPage.jsx  CategoryPanel.jsx  ChatPage.jsx  HomePage.jsx  SelectionPage.jsx  StarBackground.jsx  SummaryPage.jsx
NDA-frontend/src/data/: categories.jsx
NDA-frontend/src/styles/: animations.css  base.css  categoryPanel.css  chatPage.css  footer.css  header.css  selectionPage.css  styles.css  summaryPage.css  theme.css
csa-agent-main/: README.md  SAMPLEQA-react.md  boq_example.md  create_boq.py  fastapi_app.py  main.py  prompts.py  pyproject.toml
